Make toolbar color opaque in browser theme

In the bug, the ui assumes using lcd_text by default, but the theme has
transparent toolbar_color, rendering subpixel makes the text seem weird.
This CL forces the color to be opaque (alpha value = 0xff).

It worked before because the can_use_lcd_text property of status bubble
is set before we compute layer draw properties, and the property is
disabled all the time. But now we compute layer draw properties on
demand, the can_use_lcd_text property becomes true as the whole layer
tree is set to be able to use lcd text.

BUG=618278

Review-Url: https://codereview.chromium.org/2044223006
Cr-Commit-Position: refs/heads/master@{#403593}

Former-commit-id: 32c538f0e6cd40ebd53f336f1f3fae7eb404070b