chrome/browser/themes/browser_theme_pack_unittest.cc
@@ -434,16 +434,18 @@ TEST_F(BrowserThemePackTest, ProvideNtpHeaderColor) {
 }
 
 TEST_F(BrowserThemePackTest, SupportsAlpha) {
-  // Verify that valid alpha values are parsed correctly.
-  std::string color_json = "{ \"toolbar\": [0, 20, 40, 0], "
-                           "  \"tab_text\": [60, 80, 100, 1], "
-                           "  \"tab_background_text\": [120, 140, 160, 0.0], "
-                           "  \"bookmark_text\": [180, 200, 220, 1.0], "
-                           "  \"ntp_text\": [240, 255, 0, 0.5] }";
+  std::string color_json =
+      "{ \"toolbar\": [0, 20, 40, 1], "
+      "  \"tab_text\": [60, 80, 100, 1], "
+      "  \"tab_background_text\": [120, 140, 160, 0.0], "
+      "  \"bookmark_text\": [180, 200, 220, 1.0], "
+      "  \"ntp_text\": [240, 255, 0, 0.5] }";
   LoadColorJSON(color_json);
 
   std::map<int, SkColor> colors = GetDefaultColorMap();
-  colors[ThemeProperties::COLOR_TOOLBAR] = SkColorSetARGB(0, 0, 20, 40);
+  // Verify that valid alpha values are parsed correctly.
+  // The toolbar color's alpha value is intentionally ignored by theme provider.
+  colors[ThemeProperties::COLOR_TOOLBAR] = SkColorSetARGB(255, 0, 20, 40);
   colors[ThemeProperties::COLOR_TAB_TEXT] = SkColorSetARGB(255, 60, 80, 100);
   colors[ThemeProperties::COLOR_BACKGROUND_TAB_TEXT] =
       SkColorSetARGB(0, 120, 140, 160);
